{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 17,
  "lineage": "c6a22642-0d1e-4d22-0c45-24e953903f8d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/zones/us-central1-c/instanceGroups/cdn-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-03-14T04:14:18.805-07:00",
            "custom_request_headers": [
              "X-Client-Geo-Location: {client_region_subdivision}, {client_city}"
            ],
            "custom_response_headers": [
              "X-Cache-Hit: {cdn_cache_status}"
            ],
            "enable_cdn": true,
            "fingerprint": "nfAf3-lCAl8=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/healthChecks/l7-xlb-hc"
            ],
            "id": "projects/roberts-project-23/global/backendServices/cdn-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "cdn-backend-service",
            "port_name": "my-port",
            "project": "roberts-project-23",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/backendServices/cdn-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-14T04:13:20.293-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/roberts-project-23/global/firewalls/cdn-fw-allow-hc",
            "log_config": [],
            "name": "cdn-fw-allow-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/networks/cdn-network",
            "priority": 1000,
            "project": "roberts-project-23",
            "self_link": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/firewalls/cdn-fw-allow-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.117.37.83",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-03-14T04:12:58.400-07:00",
            "id": "projects/roberts-project-23/global/addresses/cdn-static-ip",
            "name": "cdn-static-ip",
            "prefix_length": 0,
            "project": "roberts-project-23",
            "self_link": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/addresses/cdn-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/roberts-project-23/global/forwardingRules/cdn-forwarding-rule",
            "ip_address": "projects/roberts-project-23/global/addresses/cdn-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "cdn-forwarding-rule",
            "port_range": "80",
            "project": "roberts-project-23",
            "self_link": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/forwardingRules/cdn-forwarding-rule",
            "target": "projects/roberts-project-23/global/targetHttpProxies/cdn-http-proxy"
          },
          "dependencies": [
            "google_compute_global_address.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_target_http_proxy.default",
            "google_compute_backend_service.default",
            "google_compute_network.default",
            "google_compute_subnetwork.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/roberts-project-23/global/networks/cdn-network",
            "mtu": 0,
            "name": "cdn-network",
            "project": "roberts-project-23",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/networks/cdn-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-14T04:13:20.858-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/roberts-project-23/regions/us-central1/subnetworks/cdn-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "cdn-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/networks/cdn-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "roberts-project-23",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/regions/us-central1/subnetworks/cdn-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-14T04:14:52.609-07:00",
            "id": "projects/roberts-project-23/global/targetHttpProxies/cdn-http-proxy",
            "name": "cdn-http-proxy",
            "project": "roberts-project-23",
            "proxy_bind": false,
            "proxy_id": 6075057129675464003,
            "self_link": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/targetHttpProxies/cdn-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/urlMaps/cdn-url-map"
          },
          "dependencies": [
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_subnetwork.default",
            "google_compute_url_map.default",
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-14T04:14:40.790-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/backendServices/cdn-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "x6PMXjs7l8w=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/roberts-project-23/global/urlMaps/cdn-url-map",
            "map_id": 3554249525533252943,
            "name": "cdn-url-map",
            "path_matcher": [],
            "project": "roberts-project-23",
            "self_link": "https://www.googleapis.com/compute/v1/projects/roberts-project-23/global/urlMaps/cdn-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    }
  ]
}